# every_variant

./: .gitignore  Cargo.toml  README.md
every_variant/: Cargo.toml
every_variant/src/: lib.rs
every_variant_macro/: Cargo.toml
every_variant_macro/src/: lib.rs
src/: function_test.rs  lib.rs  std_impl.rs  uuid.rs
variant_test/: Cargo.toml
variant_test/src/: main.rs
