[package]
name = "all_variants"
version = "0.2.6"
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
edition = "2018"
description = """
Provides an EveryVariant trait that provides the every_variant method on types.
Allows you to easily generate every combination of variants in structures that contains Enums,
or in nested enum trees. This to allow for additional testing of codepaths
"""

readme = "README.md"

license = "MIT"
repository = "https://github.com/TotalKrill/all_variants"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
every_variant = {version = "0.2.0", path = "./every_variant"}

[dependencies.heapless]
version = "0.5"
optional = true

[features]
default = []
ev_heapless = ["heapless"]
