[package]
name = "every_variant"
version = "0.4.5"
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
edition = "2018"
description = """
Provides an EveryVariant trait that provides the every_variant method on types.
Allows you to easily generate every combination of variants in structures that contains Enums,
or in nested enum trees. This to allow for additional testing of codepaths
"""

readme = "README.md"

license = "MIT"
repository = "https://github.com/TotalKrill/every_variant"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
every_variant_macro = {version = "0.3.1", path = "./every_variant_macro"}

[dependencies.heapless]
version = "0.7.0"
optional = true

[dependencies.uuid]
version = "1.5"
optional = true

[features]
default = []
ev_heapless = ["heapless"]
uuid = ["dep:uuid"]
