[package]
name = "every_variant_macro"
version = "0.3.2-alpha.0"
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
edition = "2018"

description = "To be used with all variant, contains the derive macro"
license = "MIT"
repository = "https://github.com/TotalKrill/every_variant"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = {version = "1.0", features = ["full", "extra-traits"]}
proc-macro-error = "1.0"
proc-macro2 = "1.0"
